fix: tap-flash on mobile safari

--- a/static/postcard.css
+++ b/static/postcard.css
@@ -10,6 +10,10 @@ input[id^=postcard-] {
   }
 }
 
+label:has(.postcard) {
+  -webkit-tap-highlight-color: transparent;
+}
+
 .postcard {
   aspect-ratio: var(--aspect-ratio);
   position: relative;
